# cpp_playground

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  Session.vim  notes.md  tmux-start
MVCplayground/: CMakeLists.txt
MVCplayground/include/mvc/: controller.h  model.h  view.h
MVCplayground/src/: controller.cpp  model.cpp  mvc_main.cpp  view.cpp
adapterPatternPlayground/: CMakeLists.txt
adapterPatternPlayground/src/: IWork.h  IWorker.h  base_adapter.cpp  client.cpp  client.h  foreign_print_worker.cpp  foreign_print_worker.h  print_worker.cpp  print_worker.h  translator.cpp  translator.h  worker_factory.h
boostAsioUdpPlayground/: CMakeLists.txt
boostAsioUdpPlayground/include/: udp_server.h  udp_server_dynamic_buffer.h  udp_server_synchronous.h
boostAsioUdpPlayground/python/: client.py
boostAsioUdpPlayground/src/: main.cpp  main_dynamic.cpp  main_synchronous.cpp  udp_server.cpp  udp_server_dynamic_buffer.cpp  udp_server_synchronous.cpp
boostMsmPlayground/: CMakeLists.txt  README.md
boostMsmPlayground/MsmDependencyInjection/: CMakeLists.txt  README.md
boostMsmPlayground/MsmDependencyInjection/src/: msm_main.cpp  statemachine.cpp  statemachine.h  statemachine_definition.h  statemachine_events.h  statemachine_off_action.h  statemachine_on_action.h
boostMsmPlayground/MsmVisitor/: CMakeLists.txt
boostMsmPlayground/MsmVisitor/src/: msm_main.cpp  visitable_state.h
boostMsmPlayground/src/: msm_main.cpp  state_visitor.h  statemachine.cpp  statemachine.h  statemachine_definition.h  statemachine_events.h  statemachine_intents.h  visitable_state.h
boostSmlPlayground/: CMakeLists.txt  README.md
boostSmlPlayground/include/boost/: sml.hpp
boostSmlPlayground/include/boost/sml/utility/: dispatch_table.hpp
boostSmlPlayground/src/: sml_main.cpp
computational_graph/: CMakeLists.txt  static_graph.cpp  static_lemo_server.cpp  todo.md
constrained_se3/: CMakeLists.txt  constrained_se3.cpp  trot.cpp
functional_programming/: CMakeLists.txt  lemo_server.cpp  ranges.cpp  utils.h
geometric_programming/: CMakeLists.txt  notes.md
hardware_abstraction/: CMakeLists.txt  PortExp.c  PortExp.h  PortExp_cfg.c  PortExp_cfg.h  PortExp_intg.h  main.c  portexpander.c  readme.md
hardware_abstraction/drivers/: stm32f3xx_hal.h  stm32f3xx_hal_def.h
misc/: CMakeLists.txt
misc/src/: constructors.cpp
nonIntrusiveDesign/: DynamicVector.cpp  PredictState.cpp
observerPatternPlayground/: CMakeLists.txt
observerPatternPlayground/src/: client.h  low_level_input.h  observer_pattern.cpp
observerPatternPlayground/src/variant_1/: CMakeLists.txt  client.cpp  client.h  observer.h  observer_pattern.cpp  subject.cpp  subject.h
observerPatternPlayground/src/variant_2/: CMakeLists.txt  subject.cpp  subject.h
observerPatternPlayground/variant_raw_pointer/: CMakeLists.txt  client.cpp  concrete_observer.cpp  concrete_observer.h  observer.h  observer_pattern.cpp
observerPatternPlayground/variant_shared_pointer/: CMakeLists.txt  concrete_observer.cpp  concrete_observer.h  notification_helper.h  observer_pattern.cpp  subject.cpp  subject.h
observerPatternPlayground/variant_shared_pointer_templated/: CMakeLists.txt  concrete_observer.cpp  concrete_observer.h  notes.md  notification_helper.cpp  notification_helper.h  observer.h  observer_pattern.cpp  subject.cpp  subject.h
proxqp/: test.cpp
siUnitsPlayground/: CMakeLists.txt
siUnitsPlayground/include/si/: lengths.h
siUnitsPlayground/src/: dummy.cpp
signalslotPlayground/: CMakeLists.txt  README.md
signalslotPlayground/include/signals/: signal.h
signalslotPlayground/src/: listener.h  publisher.h  signal.h  signal_slot.cpp  signal_slot_publisher.cpp  topic.h
strategyPatternPlayground/: CMakeLists.txt
strategyPatternPlayground/include/: concrete_strategy_a.h  concrete_strategy_b.h  free_context.h  free_strategies.h  null_strategy.h  reference_client.h
strategyPatternPlayground/src/: client.cpp  client.h  concrete_strategy_a.cpp  concrete_strategy_a.h  concrete_strategy_b.cpp  free_strategy.cpp  main.cpp  reference_strategy.cpp  strategy.h  unique_strategy.cpp  unique_strategy_v2.cpp
strategyPatternPlayground/src/util_types/: client.cpp  free_context.cpp  free_strategies.cpp  reference_client.cpp
utils/: CMakeLists.txt
utils/include/utils/: utils.h
variant/: CMakeLists.txt  variant.cpp  variant2.cpp  variant3.cpp  variant4.cpp
